--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li class="title">MNML</li>
         </ul>
         <ul>
-            <li><a href="">Download</a></li>
+            <li><a href="https://github.com/salvadb23/mnml">Download</a></li>
         </ul>
     </div>
     <div class="hero-medium">
@@ -40,7 +40,7 @@
             <button class="tertiary" type="button">Tertiary</button>
             </div>
         </div>
-        <div class="container-column" style="background-color: var(--grey-050); border: 2px solid white">
+        <div class="container-column" style="background-color: var(--grey-050); border: 3px solid white">
             <h1>Navbars</h1>
             <h3 style="font-weight:lighter; margin-bottom: 25px">Navigation available in MNML share general markup and styles</h3>
             <div class="navbar" style="margin:7px; margin-top: 0px">
@@ -77,7 +77,7 @@
                     </ul>
             </div>
         </div>
-        <div class="container-column" style="background-color: var(--grey-050); border: 2px solid white">
+        <div class="container-column" style="background-color: var(--grey-050); border: 3px solid white">
             <h1>Forms</h1>
             <h3 style="font-weight:lighter; margin-bottom: 25px">Forms in MNML look great and are easy to use</h3>
             <form action="" style="margin-left: 5px">
@@ -101,7 +101,7 @@
                 </div>
             </form>
         </div>
-            <div class="container-column" style="background-color: var(--grey-050); border: 2px solid white">
+            <div class="container-column" style="background-color: var(--grey-050); border: 3px solid white">
                 <h1>Colors</h1>
                 <h3 style="font-weight:lighter;margin-bottom: 25px"">MNML has a wide variety of colors for any need!</h3>
                 <div class="container-row">
@@ -116,7 +116,7 @@
                 </div>
                 <h3 style="font-weight: lighter">All easily accesible through CSS variables with tons of shades for each color</h3>
             </div>
-            <div class="container-column" style="background-color: var(--grey-050); border: 2px solid white">
+            <div class="container-column" style="background-color: var(--grey-050); border: 3px solid white">
                 <h1>Styles</h1>
                 <h3 style="font-weight: lighter; margin-bottom: 20px;">MNML also offers default styling for <strong>H(1-6)</strong>, <strong>P</strong>, & <strong>other common elements</strong>. MNML also contains container classes (row and column) to easily set up flex containers </h3>
                 <div class="wrapper" style="margin-left: 5px">
@@ -126,16 +126,28 @@
                 </div>
 
             </div>
-            <div class="container-column" style="background-color: var(--grey-050); border: 2px solid white">
-                <button class="primary" type="button">Primary</button>
-                <button class="secondary" type="button">Secondary</button>
-                <button class="tertiary" type="button">Tertiary</button>
-                <button class="primary danger" type="button">Primary</button>
-                <button class="secondary danger" type="button">Secondary</button>
-                <button class="tertiary danger" type="button">Tertiary</button>
-                <button class="primary success" type="button">Primary</button>
-                <button class="secondary success" type="button">Secondary</button>
-                <button class="tertiary success" type="button">Tertiary</button>
+            <div class="container-column" style="background-color: var(--grey-050); border: 3px solid white">
+                <h1>Components</h1>
+                <h3 style="font-weight: lighter; margin-bottom: 25px">MNML offers a slideshow component to easily add slideshows to your site</h3>
+                <div class="wrapper">
+                    <slide-show>
+                            <img src="http://i.imgur.com/cYanQXo.jpg" alt="mitchell">
+                            <img src="http://i.imgur.com/C08e621.jpg" alt="sal">
+                            <img src="https://i.imgur.com/X7945Q5.jpg" alt="sal">
+                    </slide-show>
             </div>
+        </div>
+    </div>
+    <div class="footer">
+            <div class="container-column">
+                <div class="container-row" style="justify-content: flex-start">
+                    <a href="https://github.com/salvadb23/mnml">Github</a>
+                    <a href="https://linkedin.com/in/salvadorbecerra">LinkedIn</a>
+                    <a href="https://salvadb23.github.io">Portfolio</a>
+                </div>
+                <div> MNML was made with ❤️ in SF by Salvador Becerra</div>
+            </div>
+    </div>
+<script src="slide.js"></script>
 </body>
 </html>
